Fixed Purchase Tickets Spacing.
CHeck line 153, removal of vertical-align and hcenter. Cleaned up CSS as
well

--- a/rangeeli_sham/assets/css/main.css
+++ b/rangeeli_sham/assets/css/main.css
@@ -310,14 +310,3 @@ a:after {
 		 -o-transition: all .1s ease-in-out;
 			transition: all .1s ease-in-out;
 }
-
-.hcenter {
-    display: inline-block;
-    horizontal-align: middle;
-    float: none;
-}
-
-.vertical-align {
-    display: flex;
-    align-items: center;
-}
